<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.kevinjanvier.angalia.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/five"
        android:paddingRight="@dimen/five"
       >
        <TextView
            android:layout_marginTop="@dimen/ten"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_your_Phone"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/red"
            android:textStyle="bold"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="50dp">

        <com.kevinjanvier.angalia.RoundedImageView
            android:id="@+id/check_version"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/logo"
            android:layout_gravity="center"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_below="@+id/check_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_version"
            android:textSize="18sp"
            android:textStyle="normal"
            android:id="@+id/textView"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="50dp">
        <Button
            android:id="@+id/textnow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test"
            android:textColor="@color/white"
            android:background="@drawable/share_btn"/>
    </LinearLayout>




</LinearLayout>
