<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_phone_passed"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.kevinjanvier.angalia.PhonePassed">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        android:theme="@style/AppToolbar">

        <ImageView
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_share_white_24dp"
            android:layout_gravity="right"
            android:layout_marginRight="@dimen/ten"
            android:layout_marginEnd="@dimen/ten"
            />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:background="@color/grey_white">


        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            card_view:cardCornerRadius="4dp">

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">
              <ImageView
                  android:layout_width="70dp"
                  android:layout_height="70dp"
                  android:src="@drawable/ok"
                  android:layout_marginTop="@dimen/ten"
                  android:layout_gravity="center"/>


              <TextView
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="Your Phone is SAFE "
                  android:layout_gravity="center"
                  android:gravity="center"
                  android:textSize="20sp"
                  android:textColor="@color/black"
                  android:textStyle="bold"
                  android:layout_marginTop="@dimen/ten"
                  />

              <TextView
                  android:layout_marginTop="@dimen/ten"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/success"
                  android:textSize="14sp"
                  android:layout_gravity="center"
                  android:gravity="center"
                  />
              <TextView
                  android:layout_marginTop="@dimen/ten"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/God"
                  android:textSize="14sp"
                  android:textColor="@color/black"
                  android:layout_gravity="center"/>



          </LinearLayout>

        </android.support.v7.widget.CardView>




    </LinearLayout>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"

        >

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cv"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"

                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/model"
                    android:layout_alignParentTop="true"
                    android:text="Phone Model"
                    android:textStyle="normal"
                    android:textSize="18sp"
                    />

                <TextView
                    android:layout_below="@+id/model"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/manufacturer"
                    android:textSize="18sp"
                    android:text="OSName"
                    android:layout_marginTop="@dimen/five"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/serial_number"
                    android:layout_below="@+id/manufacturer"
                    android:text="Serial Number"
                    android:textSize="18sp"
                    android:layout_marginTop="@dimen/five"
                    />

                <TextView
                    android:id="@+id/version"
                    android:layout_marginTop="20dp"
                    android:layout_below="@+id/serial_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/version"
                    android:textSize="40sp"/>

            </RelativeLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Test Again"
            android:textColor="@color/white"
            android:background="@drawable/share_btn"
            android:textSize="18sp"
      />
    </LinearLayout>





</LinearLayout>
